# motoman_control

./: .gitignore  README.md
apc_util/: CMakeLists.txt  manifest.xml  package.xml  setup.py
apc_util/nodes/: calibrate_shelf.py  publish_checkerboard.py  publish_lab.py  publish_object.py  shelf_collision.py
apc_util/scripts/: validate_workorder.py
apc_util/src/: PublishPointcloudCollision.srv  publish_pointcloud_collision_server.cpp
apc_util/src/apc_util/: collision.py  grasping.py  moveit.py  scoop.py  services.py  shelf.py  smach.py  transformation_helpers.py  vision.py
grasp_planner/: CMakeLists.txt  generateGraspDatabase.py  package.xml
grasp_planner/env/: cheezit.env.xml  colorballs.env.xml  crayon.env.xml  dentaltreat.env.xml  eraser.env.xml  glue.env.xml  highlighters.env.xml  huckfinn.env.xml  indexcards.env.xml  oreo.env.xml  outletplugs.env.xml  pencil.env.xml  pencilcup.env.xml  plushduck.env.xml  plushfrog.env.xml  rubberduck.env.xml  safetyglasses.env.xml  screwdrivers.env.xml  sparkplug.env.xml  stickynotes.env.xml  stirsticks.env.xml  strawcups.env.xml  tennisball.env.xml  test.env.xml
grasp_planner/gripper_srv/scripts/: gripper_controller (copy).py  gripper_controller.py
grasp_planner/launch/: graspDB_srv.launch  onlinegrasp.launch
grasp_planner/msg/: apcGraspArray.msg  apcGraspPose.msg
grasp_planner/robot/: robotiqhand.kinbody.xml  robotiqhand.robot.xml
grasp_planner/scripts/: generateGraspDatabase.py  graspDB_srv.py  graspDB_testclient.py  graspDict.csv  graspDict_crayola_64_ct.csv  graspDict_kyjen_squeakin_eggs_plush_puppies.csv  graspDict_mommys_helper_outlet_plugs.csv  grasp_force.yaml  grasping_server.py  onlineGraspDB_srv.py  online_grasp_server.py  onlinetest.py  viewGrasps.py
grasp_planner/scripts/offline_grasp/: graspDict_champion_copper_plus_spark_plug.csv  graspDict_cheezit_big_original.csv  graspDict_elmers_washable_no_run_school_glue.csv  graspDict_expo_dry_erase_board_eraser.csv  graspDict_feline_greenies_dental_treats.csv  graspDict_first_years_take_and_toss_straw_cup.csv  graspDict_genuine_joe_plastic_stir_sticks.csv  graspDict_highland_6539_self_stick_notes.csv  graspDict_kong_air_dog_squeakair_tennis_ball.csv  graspDict_kong_duck_dog_toy.csv  graspDict_kong_sitting_frog_dog_toy.csv  graspDict_mark_twain_huckleberry_finn.csv  graspDict_mead_index_cards.csv  graspDict_munchkin_white_hot_duck_bath_toy.csv  graspDict_oreo_mega_stuf.csv  graspDict_paper_mate_12_count_mirado_black_warrior.csv  graspDict_rolodex_jumbo_pencil_cup.csv  graspDict_safety_works_safety_glasses.csv  graspDict_sharpie_accent_tank_style_highlighters.csv  graspDict_stanley_66_052.csv
grasp_planner/scripts/savedmsg/: binA_cheezit_big_original_2015-05-17_12:08  binA_cheezit_big_original_2015-05-17_12:15  binA_cheezit_big_original_2015-05-17_12:19  binA_elmers_washable_no_run_school_glue_2015-05-17_14:56  binA_elmers_washable_no_run_school_glue_2015-05-17_14:58  binA_elmers_washable_no_run_school_glue_2015-05-17_15:01  binA_elmers_washable_no_run_school_glue_2015-05-17_15:08  binA_elmers_washable_no_run_school_glue_2015-05-17_15:13  binA_elmers_washable_no_run_school_glue_2015-05-17_15:52  binA_elmers_washable_no_run_school_glue_2015-05-17_16:05  binA_elmers_washable_no_run_school_glue_2015-05-17_16:13  binA_elmers_washable_no_run_school_glue_2015-05-17_16:18  binA_elmers_washable_no_run_school_glue_2015-05-17_16:31  binA_elmers_washable_no_run_school_glue_2015-05-17_16:34  binA_feline_greenies_dental_treats_2015-05-16_13:41  binA_feline_greenies_dental_treats_2015-05-16_13:54  binA_feline_greenies_dental_treats_2015-05-17_12:27  binA_feline_greenies_dental_treats_2015-05-17_12:29  binA_feline_greenies_dental_treats_2015-05-17_12:32  binA_feline_greenies_dental_treats_2015-05-17_12:37  binA_feline_greenies_dental_treats_2015-05-17_18:31  binA_feline_greenies_dental_treats_2015-05-17_18:36  binA_feline_greenies_dental_treats_2015-05-18_01:33  binA_feline_greenies_dental_treats_2015-05-18_01:37  binA_feline_greenies_dental_treats_2015-05-18_01:44  binA_feline_greenies_dental_treats_2015-05-18_01:45  binA_feline_greenies_dental_treats_2015-05-18_03:08  binB_cheezit_big_original_2015-05-17_12:33  binB_cheezit_big_original_2015-05-17_12:40  binB_cheezit_big_original_2015-05-17_12:43  binB_cheezit_big_original_2015-05-17_15:15  binB_cheezit_big_original_2015-05-17_15:54  (+75 more)
grasp_planner/srv/: apcGraspDB.srv  graspDB.srv
motoman-indigo-devel/motoman_moveit/: CMakeLists.txt  package.xml
motoman_moveit/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
motoman_moveit/planning/: CMakeLists.txt  CMakeLists.txt~
motoman_moveit/srv/: attach_tray_server.srv  convert_trajectory_server.srv  convert_trajectory_server_OLD.srv  get_tray_server.srv  move_group_server.srv  move_group_server.srv~
softkinetic_camera_driver/softkinetic_camera/: CMakeLists.txt  package.xml
softkinetic_camera_driver/softkinetic_camera_driver/: CMakeLists.txt  package.xml
softkinetic_camera_driver/softkinetic_description/: CMakeLists.txt  package.xml
softkinetic_camera_driver/softkinetic_launch/: CMakeLists.txt  package.xml
task_controller/: CMakeLists.txt  manifest.xml  package.xml  setup.py
task_controller/cfg/: items.yaml  shelf.yaml  shelf.yaml.bak  shelf_collision.yaml  shelf_with_tape.yaml
task_controller/launch/: demo.launch  main.launch  simulation.launch  test.launch
task_controller/msg/: APCItem.msg  WorkOrder.msg
task_controller/nodes/: ErrorHandler.py  FinishTask.py  MoveToBin.py  PickAndPlaceItem.py  PickItem.py  PickScoop.py  PlaceItem.py  SafeMode.py  ScanForItem.py  Scheduler.py  Scoop.py  ScoopAndPickItem.py  calibrate_shelf.py  convert_order_to_schedule.py  handle_order.py  motoman_controller.py  publish_shelf_tf.py  run_schedule.py  util.py
task_controller/orders/: alex.json  joe.json  simple.json  test1.json  test_debug.json
task_controller/schedules/: Ted.yaml  cheezit_b.yaml  default.yaml  gabe.yaml  joseph.yaml  kevin.yaml  sampletest.yaml  simple.yaml  test.yaml
task_controller/src/: grasping_test.py
task_controller/srv/: SetSchedule.srv
(+152 files in other folders)
