<?xml version="1.0"?>
<package>
  <name>grasp_planner</name>
  <version>0.6.1</version>
  <description>Grasp planner package</description>
  <license>BSD</license>

  <author email="kyang@wpi.edu">Kevin Yang</author>

  <maintainer email="kyang@wpi.edu">Kevin Yang</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
