<?xml version="1.0"?>
<package>
  <name>softkinetic_camera_driver</name>
  <version>0.1.0</version>
  <description>The softkinetic_camera_driver package</description>

  <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>softkinetic_camera</run_depend>
  <run_depend>softkinetic_description</run_depend>
  <run_depend>softkinetic_launch</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
