<?xml version="1.0"?>
<package>
  <name>softkinetic_description</name>
  <version>0.1.0</version>
  <description>The softkinetic_description package</description>

  <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>

