<?xml version="1.0"?>
<package>
  <name>softkinetic_launch</name>
  <version>0.1.0</version>
  <description>The softkinetic_launch package</description>

  <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build/run dependencies on catkin packages -->
  <run_depend>softkinetic_camera</run_depend>
  <run_depend>softkinetic_description</run_depend>

</package>

